crates/keron-lang/tests/corpus/errors/check/map_double_key.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `Double` is not a valid `Map` key type; allowed keys are `String` and `Int`
  --> 1:8
  |
1 | val m: Map<Double, Int> = {}
  |        ^^^^^^^^^^^^^^^^^
